istio-yaml/birdwatch/aleph-canary.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: aleph
  namespace: games
spec:
  hosts:
  - aleph
  http:
  - route:
    - destination:
        host: aleph
        port:
          number: 80
        subset: production
      weight: 100
    - destination:
        host: aleph
        port:
          number: 80
        subset: canary
      weight: 0
